docs:update info

--- a/前端基础知识/01.ajax-fetch-axios的区别.md
+++ b/前端基础知识/01.ajax-fetch-axios的区别.md
@@ -1,8 +1,8 @@
 ### 要点
 
-1.ajax(asynchronous javascript and xml)是一种技术称呼,不是具体的API和库
-2.fetch是新的异步请求API, 可替代XMLHttpRequest
-3.axios是第三方库
+* 1.ajax(asynchronous javascript and xml)是一种技术称呼,不是具体的API和库
+* 2.fetch是新的异步请求API, 可替代XMLHttpRequest
+* 3.axios是第三方库
 
 ### 延伸
 1.库和框架的区别
@@ -29,7 +29,7 @@ part2 拦截器
 * 当status为401时,将登录认证信息和cookie,localStorage等信息清空,导航到我们的登录页
 
 3.axios优化案例
-当登录信息失效时,多个请求触发重复频繁的报错
+* case 当登录信息失效时,多个请求触发重复频繁的报错
 * solution1 设置固定响应时间(如5s)的flag, 5s内多次请求触发一次即改变flag(响应端解决)
 缺点5s间隔以上的响应无法处理
 * solution2 设置请求的队列,每发出一个请求把它放在队列里面。如果发出的请求返回401,就把剩下的请求缓存起来,不进行统一的报错处理。监听token回来后,再进行请求的发送
